修改Base64Encoder